--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Anil <contact@solutioncoder.com>",
   "license": "MIT",
   "devDependencies": {
-    "wrangler": "2.0.26"
+    "wrangler": "^2.1.11"
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "~0.0.11"
