--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ name = "personal-website"
 workers_dev = false
 route = "solutioncoder.com/*"
 
-main = "src/index.js"
+main = "cloudflare-worker/index.js"
 compatibility_date = "2022-08-22"
 
 [site]
