--- a/personal-website/config.toml
+++ b/personal-website/config.toml
@@ -22,7 +22,7 @@ soft_skills = "Fluent Communication & Cognitive Flexibility"
 github_link = "https://github.com/anil-dewani"
 resume_link = "/documents/resume-of-anil.pdf"
 email_link = "mail:contact@anildewani.com"
-linkedin_link = "https://www.linkedin.com/in/anil-d-15729a1b9/"
+linkedin_link = "www.linkedin.com/in/anildewani"
 telegram_link = "https://t.me/timefractals"
 instagram_link = "https://www.instagram.com/madbytes/"
 
