--- a/personal-website/config.toml
+++ b/personal-website/config.toml
@@ -4,7 +4,7 @@ title = "Anil Dewani"
 
 [Params]
 website_logo = "/anil-dewani-logo.png"
-coder_photo = "/coder_photo-2.png"
+coder_photo = "/photoofme.jpeg"
 coder_name = "Anil Dewani"
 coder_bio = "Developer, Tinkerer, Enterprenuer"
 coding_philosophy_link = "/blog/my-coding-philosophy/"
