removing few content

--- a/personal-website/config.toml
+++ b/personal-website/config.toml
@@ -32,133 +32,130 @@ homepage_sub_header = "This is sub header"
 homepage_paragraph = "This is paragraph"
 
 arsenal_list = [
-    "Web-Application Development",
-    "Queue & Cache Frameworks",
-    "Database Management",
-    "Web Servers",
-    "DevOps Tools",
-    "Scraping Tools",
-    "Git and C.I",
-    "Load testing",
-    "Security Tools",
-    "SEO Tools",
-    "Advertising Management",
-    "Embedeed Systems",
-    "Operating Systems",
+  "Web-Application Development",
+  "Queue & Cache Frameworks",
+  "Database Management",
+  "Web Servers",
+  "DevOps Tools",
+  "Scraping Tools",
+  "Git and C.I",
+  "Load testing",
+  "Security Tools",
+  "SEO Tools",
+  "Advertising Management",
+  "Embedeed Systems",
+  "Operating Systems",
 ]
 arsenal_list_message = [
-    "Python, Django, Django Rest Framework & Flask.",
-    "RabbitMQ, Redis, Huey, Memcached & Varnish.",
-    "PostgreSQL, SQLite & MySQL/MariaDB.",
-    "Nginx, Apache, Gunicorn & Uvicorn.",
-    "Supervisor, Vagrant, Prometheus, & OpenVPN.",
-    "Scrapy, Selenium, urllib, python requests & beautifulsoup4.",
-    "Gitlab CI & Buddy.",
-    "Locust.",
-    "HawkEye, PyUP, & MetaSploit.",
-    "SEMRush, Ahrefs, Ubersuggest, Google Keyword Planner & more.",
-    "Facebook Ads, Native Ads, AdRoll, Google Display Network, Google Search Ads, Universal App Campaigns & Push Ads.",
-    "Arduino & Raspberry Pi.",
-    "Debian, Ubuntu, CentOS & Mac OSX",
+  "Python, Django, Django Rest Framework & Flask.",
+  "RabbitMQ, Redis, Huey, Memcached & Varnish.",
+  "PostgreSQL, SQLite & MySQL/MariaDB.",
+  "Nginx, Apache, Gunicorn & Uvicorn.",
+  "Supervisor, Vagrant, Prometheus, & OpenVPN.",
+  "Scrapy, Selenium, urllib, python requests & beautifulsoup4.",
+  "Gitlab CI & Buddy.",
+  "Locust.",
+  "HawkEye, PyUP, & MetaSploit.",
+  "SEMRush, Ahrefs, Ubersuggest, Google Keyword Planner & more.",
+  "Facebook Ads, Native Ads, AdRoll, Google Display Network, Google Search Ads, Universal App Campaigns & Push Ads.",
+  "Arduino & Raspberry Pi.",
+  "Debian, Ubuntu, CentOS & Mac OSX",
 ]
 
 arsenal_list_images = [
-    "/arsenal/web.png",
-    "/arsenal/process.png",
-    "/arsenal/database.png",
-    "/arsenal/server.png",
-    "/arsenal/devops.png",
-    "/arsenal/crawler.png",
-    "/arsenal/git.png",
-    "/arsenal/load-testing.png",
-    "/arsenal/web-security.png",
-    "/arsenal/seo.png",
-    "/arsenal/ads.png",
-    "/arsenal/arduino.png",
-    "/arsenal/os.png",
+  "/arsenal/web.png",
+  "/arsenal/process.png",
+  "/arsenal/database.png",
+  "/arsenal/server.png",
+  "/arsenal/devops.png",
+  "/arsenal/crawler.png",
+  "/arsenal/git.png",
+  "/arsenal/load-testing.png",
+  "/arsenal/web-security.png",
+  "/arsenal/seo.png",
+  "/arsenal/ads.png",
+  "/arsenal/arduino.png",
+  "/arsenal/os.png",
 ]
 
 open_source_projects_image = ["/square/ssh-icon.jpg", "/square/backup-file.png"]
 
 open_source_projects_name = [
-    "Firefly Import Helpers",
-    "Unix Server Backup",
-    "SSH Monitoring Web UI",
-    "Idea Management Mobile App",
-    "JAMStack based personal website"
+  "Firefly Import Helpers",
+  "Unix Server Backup",
+  "SSH Monitoring Web UI",
+  "JAMStack based personal website",
 ]
 open_source_projects_message = [
-    "An extended transactions importer for the Firefly III Personal Finance manager software. Dedicated modules for top banks of india, to import bank account and credit card transactions.",
-    "An python script focused on doing a detailed daily snapchat of linux servers and automatically uploading them to s3 enabled storage servers.",
-    "Django based web UI application which lists down all the attempts made to login to your server via SSH. Useful to do security audits and blocking out crawler bots doing bruteforce attacks on the server.",
-    "An Flutter based mobile application which helps to quick add new ideas flowing through the mind, and manage execution of each by shortlisting them into various categories of operation.",
-    "Personal website coded using the JAMStack Approach using hugo framework, deployed using cloudflare workers on their worldwide CDN for lowest latency and fastest cache.",
+  "An extended transactions importer for the Firefly III Personal Finance manager software. Dedicated modules for top banks of india, to import bank account and credit card transactions.",
+  "An python script focused on doing a detailed daily snapchat of linux servers and automatically uploading them to s3 enabled storage servers.",
+  "Django based web UI application which lists down all the attempts made to login to your server via SSH. Useful to do security audits and blocking out crawler bots doing bruteforce attacks on the server.",
+  "Personal website coded using the JAMStack Approach using hugo framework, deployed using cloudflare workers on their worldwide CDN for lowest latency and fastest cache.",
 
 ]
 open_source_projects_link = [
-    "https://github.com/anil-dewani/firefly-import-helper",
-    "https://github.com/anil-dewani/unix-server-backup",
-    "https://github.com/anil-dewani/ssh-logging-web-ui",
-    "https://github.com/anil-dewani/Ideas-Management",
-    "https://github.com/anil-dewani/personal-website",
+  "https://github.com/anil-dewani/firefly-import-helper",
+  "https://github.com/anil-dewani/unix-server-backup",
+  "https://github.com/anil-dewani/ssh-logging-web-ui",
+  "https://github.com/anil-dewani/personal-website",
 
 ]
 
 
 photography_titles = [
-    "The Elephant Ride",
-    "Flower in the fog",
-    "Better Together",
-    "To Be In The Moment",
-    "Flower of the moonlight",
-    "Before flying high",
-    "The Smiley Ball",
-    "Busy in the evening",
-    "Illumination",
-    "Just Chilling",
-    "The Pineapple Express",
+  "The Elephant Ride",
+  "Flower in the fog",
+  "Better Together",
+  "To Be In The Moment",
+  "Flower of the moonlight",
+  "Before flying high",
+  "The Smiley Ball",
+  "Busy in the evening",
+  "Illumination",
+  "Just Chilling",
+  "The Pineapple Express",
 ]
 
 photography_sub_titles = [
-    "Coorg, India.",
-    "Ooty, India.",
-    "Rajkot, India.",
-    "Coorg, India.",
-    "Rajkot, India.",
-    "Rajkot, India.",
-    "Home.",
-    "Rajkot, India.",
-    "Ahemdabad, India.",
-    "Coorg, India",
-    "Mumbai, India.",
+  "Coorg, India.",
+  "Ooty, India.",
+  "Rajkot, India.",
+  "Coorg, India.",
+  "Rajkot, India.",
+  "Rajkot, India.",
+  "Home.",
+  "Rajkot, India.",
+  "Ahemdabad, India.",
+  "Coorg, India",
+  "Mumbai, India.",
 ]
 
 photography_thumbnails = [
-    "/photography-thumbnails/001.jpg",
-    "/photography-thumbnails/002.jpg",
-    "/photography-thumbnails/011.jpg",
-    "/photography-thumbnails/003.jpg",
-    "/photography-thumbnails/004.jpg",
-    "/photography-thumbnails/005.jpg",
-    "/photography-thumbnails/006.jpg",
-    "/photography-thumbnails/007.jpg",
-    "/photography-thumbnails/009.jpg",
-    "/photography-thumbnails/010.jpg",
-    "/photography-thumbnails/008.jpg",
+  "/photography-thumbnails/001.jpg",
+  "/photography-thumbnails/002.jpg",
+  "/photography-thumbnails/011.jpg",
+  "/photography-thumbnails/003.jpg",
+  "/photography-thumbnails/004.jpg",
+  "/photography-thumbnails/005.jpg",
+  "/photography-thumbnails/006.jpg",
+  "/photography-thumbnails/007.jpg",
+  "/photography-thumbnails/009.jpg",
+  "/photography-thumbnails/010.jpg",
+  "/photography-thumbnails/008.jpg",
 ]
 
 photography_full_images = [
-    "/photography/001.jpg",
-    "/photography/002.jpg",
-    "/photography/011.jpg",
-    "/photography/003.jpg",
-    "/photography/004.jpg",
-    "/photography/005.jpg",
-    "/photography/006.jpg",
-    "/photography/007.jpg",
-    "/photography/009.jpg",
-    "/photography/010.jpg",
-    "/photography/008.jpg",
+  "/photography/001.jpg",
+  "/photography/002.jpg",
+  "/photography/011.jpg",
+  "/photography/003.jpg",
+  "/photography/004.jpg",
+  "/photography/005.jpg",
+  "/photography/006.jpg",
+  "/photography/007.jpg",
+  "/photography/009.jpg",
+  "/photography/010.jpg",
+  "/photography/008.jpg",
 ]
 
 
