--- a/personal-website/config.toml
+++ b/personal-website/config.toml
@@ -9,6 +9,7 @@ coder_name = "Anil Dewani"
 coder_bio = "Developer, Tinkerer, Enterprenuer"
 coding_philosophy_link = "/blog/my-coding-philosophy/"
 
+description = "Anil Dewani is an senior developer with a passion for open source and photography. He is a computer engineer by profession and has a keen interest in web development, devops, and photography."
 designation = "Computer Engineer"
 lives_at = "Ahemdabad, Gujarat"
 birth_date = "03rd Nov, 1990"
