Added skillsets button and minor enhancements

--- a/personal-website/config.toml
+++ b/personal-website/config.toml
@@ -26,7 +26,7 @@ email_link = "mailto:contact@anildewani.com"
 linkedin_link = "https://www.linkedin.com/in/anil-dewani"
 telegram_link = "https://t.me/timefractals"
 instagram_link = "https://www.instagram.com/madbytes/"
-
+skillsets_link = "/about/"
 homepage_header = "This is header"
 homepage_sub_header = "This is sub header"
 
