enhanced sidebar to include appropriate links

--- a/personal-website/config.toml
+++ b/personal-website/config.toml
@@ -27,6 +27,8 @@ linkedin_link = "https://www.linkedin.com/in/anil-dewani"
 telegram_link = "https://t.me/timefractals"
 instagram_link = "https://www.instagram.com/madbytes/"
 skillsets_link = "/about/"
+dotfiles_link = "https://github.com/anil-dewani/dotfiles"
+photography_link = "/photography/"
 homepage_header = "This is header"
 homepage_sub_header = "This is sub header"
 
