Adding more photographs to my collection

--- a/personal-website/config.toml
+++ b/personal-website/config.toml
@@ -127,6 +127,25 @@ photography_titles = [
   "Illumination",
   "Just Chilling",
   "The Pineapple Express",
+  "Ride towards the peak",
+  "Paraglyding Buddies",
+  "Forest Horse",
+  "Twin Tree",
+  "Getting Ready To Bloom",
+  "Blooming in escatasy",
+  "Mystery Forest Trail",
+  "Hello Sunshine",
+  "Living at the top",
+  "Architectural Paradise",
+  "Cloudy Reflections",
+  "Countryside Bliss",
+  "Orange Sunshine",
+  "Witnessing the sky show",
+  "Goodbye Dear Sun",
+  "Tropical Evening",
+  "Gaze into the clouds",
+  "Symmetry of the nature",
+  "Mr Ice",
 ]
 
 photography_sub_titles = [
@@ -141,6 +160,25 @@ photography_sub_titles = [
   "Ahemdabad, India.",
   "Coorg, India",
   "Mumbai, India.",
+  "Sholang Valley, India.",
+  "Sholang Valley, India.",
+  "Sethan, India.",
+  "Old Manali, India.",
+  "Naggar, India.",
+  "Manali, India.",
+  "Old Manali, India.",
+  "South Goa, India.",
+  "Tosh Village, India.",
+  "Tosh Village, India.",
+  "Divar Island, India.",
+  "Divar Island, India.",
+  "North Goa, India.",
+  "Candolim, Goa, India.",
+  "Ashwem, Goa, India.",
+  "Candolim, Goa, India.",
+  "Blue Skies, Earth.",
+  "Chandigarh, India.",
+  "Solang Valley, India.",
 ]
 
 photography_thumbnails = [
@@ -155,6 +193,25 @@ photography_thumbnails = [
   "/photography-thumbnails/009.jpg",
   "/photography-thumbnails/010.jpg",
   "/photography-thumbnails/008.jpg",
+  "/photography-thumbnails/012.jpg",
+  "/photography-thumbnails/013.jpg",
+  "/photography-thumbnails/032.jpg",
+  "/photography-thumbnails/015.jpg",
+  "/photography-thumbnails/016.jpg",
+  "/photography-thumbnails/017.jpg",
+  "/photography-thumbnails/018.jpg",
+  "/photography-thumbnails/019.jpg",
+  "/photography-thumbnails/020.jpg",
+  "/photography-thumbnails/021.jpg",
+  "/photography-thumbnails/022.jpg",
+  "/photography-thumbnails/023.jpg",
+  "/photography-thumbnails/026.jpg",
+  "/photography-thumbnails/025.jpg",
+  "/photography-thumbnails/024.jpg",
+  "/photography-thumbnails/027.jpg",
+  "/photography-thumbnails/028.jpg",
+  "/photography-thumbnails/030.jpg",
+  "/photography-thumbnails/031.jpg",
 ]
 
 photography_full_images = [
@@ -169,6 +226,25 @@ photography_full_images = [
   "/photography/009.jpg",
   "/photography/010.jpg",
   "/photography/008.jpg",
+  "/photography/012.jpg",
+  "/photography/013.jpg",
+  "/photography/032.jpg",
+  "/photography/015.jpg",
+  "/photography/016.jpg",
+  "/photography/017.jpg",
+  "/photography/018.jpg",
+  "/photography/019.jpg",
+  "/photography/020.jpg",
+  "/photography/020.jpg",
+  "/photography/022.jpg",
+  "/photography/023.jpg",
+  "/photography/026.jpg",
+  "/photography/025.jpg",
+  "/photography/024.jpg",
+  "/photography/027.jpg",
+  "/photography/028.jpg",
+  "/photography/030.jpg",
+  "/photography/031.jpg",
 ]
 
 
