--- a/personal-website/config.toml
+++ b/personal-website/config.toml
@@ -92,6 +92,7 @@ open_source_projects_name = [
   "Jira Dashboard",
   "OSX Locker",
   "Ideas Manager",
+  "System Design Overview",
 ]
 open_source_projects_message = [
   "An extended transactions importer for the Firefly III Personal Finance manager software. Dedicated modules for top banks of india, to import bank account and credit card transactions.",
@@ -102,6 +103,7 @@ open_source_projects_message = [
   "A bird-eye view dashboard which connects via API to your JIRA account and parses tickets assigned to you to guage your upcoming work-load to better plan your commitments.",
   "This utility changes password of your current osx user to a random password and notifies you of the new password automatically on the next working day. You will not have access to the newly set password until next working day arrives. It locks you out of your own system to enhance your work-life balance commitments.",
   "Flutter based mobile application to quickly add new ideas to a cloud database and shift ideas into meaningful modes of operations to better manage them.",
+  "Quick revision notes for conceptual understanding of system design concepts with real-life examples.",
 ]
 open_source_projects_link = [
   "https://github.com/anil-dewani/firefly-import-helper",
@@ -112,6 +114,7 @@ open_source_projects_link = [
   "https://github.com/anil-dewani/jira-dashboard",
   "https://github.com/anil-dewani/osx-locker",
   "https://github.com/anil-dewani/Ideas-Management",
+  "https://github.com/anil-dewani/system-design-overview",
 ]
 
 
